--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     </style>
   </head>
   <body>
-    <h3>CommitStream coming soon...</h3>
+    <h3>Your Commits coming soon...</h3>
+    <br />
+    <a href="http://www.versionone.com"><img src="http://i.imgur.com/w0lgG8G.jpg" alt="VersionOne.com" width="400" height="267" /></a>
   </body>
 </html>
